<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_ser_pro_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/menu_s_p_requests" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />




        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_switch"
            android:title="@string/menu_switch" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_theme_toggle"
            android:icon="@drawable/ic_dark_light"
            android:title="@string/dark_light" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>