<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/logo"
            android:scaleType="centerInside"
            android:layout_marginBottom="10sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="10sp"
        android:text="@string/login_message"
        />


    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPersonName"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:hint="@string/email_address"
        />


<!--    <EditText-->
<!--        android:id="@+id/et_login_password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:hint="@string/password"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="@color/black"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:padding="15dp"-->
<!--        android:inputType="textPassword"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:background="@drawable/et_custom"-->
<!--        android:textSize="15sp" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:hint=" "
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_toggle_selector"
        app:passwordToggleContentDescription="Toggle password visibility">

        <EditText
            android:background="@drawable/et_custom"
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:layout_centerInParent="true"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10sp"
        android:text="@string/login"
        />

    <ProgressBar
        android:id="@+id/progressbarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />



    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/no_account"
        android:layout_below="@id/btn_login"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_register_link"
            android:layout_weight="5"
            android:text="@string/click_here_to_register"
            android:background="@android:color/transparent"
            android:textColor="@color/color_blue"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_weight="5"
            android:text="Forgot Password"
            android:background="@android:color/transparent"
            android:textColor="@color/client"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/or"
        android:textSize="15sp"
        />

<!--    <com.shobhitpuri.custombuttons.GoogleSignInButton-->
<!--        android:id="@+id/btn_google_login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="@string/google_sign_up"-->
<!--        android:layout_gravity="center_vertical|center_horizontal"-->
<!--        app:isDarkTheme="true" />-->
    <com.google.android.gms.common.SignInButton
        android:paddingVertical="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/google_sign_up"
        android:textColor="@color/google_button_text_color"
        android:layout_gravity="center_vertical|center_horizontal"
        app:isDarkTheme="true" />



</LinearLayout>